# LEGO-Tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/gui/: create_win.py  load_win.py  search_win.py  win_helpers.py
src/lego_tracker/: __main__.py  main.py  settings.py
src/lego_tracker/gui/: create_win.py  load_win.py  main_menu.py  search_win.py  win_helpers.py
